web/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaigara-web
  namespace: kaigara
spec:
  selector:
    app: kaiweb
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
