web/kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kaigara
  name: kaigara-website
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: kaigara.org
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-www-redirect
          servicePort: 80

  - host: www.kaigara.org
    http:
      paths:
      - path: /
        backend:
          serviceName: kaigara-web
          servicePort: 80

  tls:
    - secretName: tls-website-www-kaigara
      hosts:
        - www.kaigara.org

    - secretName: tls-website-kaigara
      hosts:
        - kaigara.org
